--- a/docs/reference/api/templates/_content.md.j2
+++ b/docs/reference/api/templates/_content.md.j2
@@ -6,13 +6,13 @@
 
 {{ schema | ref_to_link }}
 
-{% if schema %}
+{%- if schema %}
 {% include './_object_schema.md.j2' %}
 {% endif %}
 
-{% with root = item -%}
+{%- with root = item -%}
 {% include './_example.md.j2' -%}
 {% endwith -%}
 {% endfor -%}
 
-{% endif -%}
+{%- endif -%}
